[package]
authors = ["Fastly"]
edition = "2018"
name = "prometheus-utils"
version = "0.5.0"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
lazy_static = "1.4.0"
paste = "^1.0.4"
pin-project = "1.0.0"
prometheus = "0.12.0"
num-traits = "0.2"
parking_lot = "0.10"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
